<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/microphone"
        android:layout_width="185dp"
        android:layout_height="245dp"
        android:layout_marginBottom="150dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/microphone_desc"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/microphone"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/settings_desc"
        android:onClick="openSettings"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/about"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/about_desc"
        android:onClick="openAbout"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/settings"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/about"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>